--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ramster-ui-forms",
-  "version": "0.0.19",
+  "version": "0.0.20",
   "description": "A forms and inputs package that goes together with the other ramster-ui packages.",
   "main": "dist/bundles/ramster-ui-forms.umd.js",
   "scripts": {
@@ -77,6 +77,6 @@
     "@angular/material": "^7.1.0",
     "@types/hammerjs": "^2.0.36",
     "hammerjs": "^2.0.8",
-    "ramster-ui-core": "^0.0.12"
+    "ramster-ui-core": ">=0.0.17"
   }
 }
