--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ramster-ui-forms",
-  "version": "0.0.44",
+  "version": "0.1.0",
   "description": "A forms and inputs package that goes together with the other ramster-ui packages.",
   "main": "dist/bundles/ramster-ui-forms.umd.js",
   "scripts": {
@@ -58,7 +58,7 @@
     "progress-bar-webpack-plugin": "^1.11.0",
     "pug": "^2.0.3",
     "pug-html-loader": "^1.1.5",
-    "ramster-ui-core": ">=0.0.37",
+    "ramster-ui-core": "^0.1.3",
     "raw-loader": "^1.0.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.3.3",
@@ -78,6 +78,6 @@
     "@angular/material": "^7.1.0",
     "@types/hammerjs": "^2.0.36",
     "hammerjs": "^2.0.8",
-    "ramster-ui-core": ">=0.0.26"
+    "ramster-ui-core": ">=0.1.3"
   }
 }
