--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ramster-ui-forms",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "A forms and inputs package that goes together with the other ramster-ui packages.",
   "main": "dist/bundles/ramster-ui-forms.umd.js",
   "scripts": {
@@ -78,6 +78,7 @@
     "@angular/material": "^7.1.0",
     "@types/hammerjs": "^2.0.36",
     "hammerjs": "^2.0.8",
+    "ngx-wig": "^2.0.1",
     "ramster-ui-core": ">=0.1.3"
   }
 }
