--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ramster-ui-forms",
-  "version": "0.4.1",
+  "version": "0.5.0",
   "description": "A forms and inputs package that goes together with the other ramster-ui packages.",
   "main": "dist/bundles/ramster-ui-forms.umd.js",
   "scripts": {
@@ -28,47 +28,47 @@
     }
   },
   "devDependencies": {
-    "@angular/animations": "^7.2.15",
+    "@angular/animations": "^7.2.16",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "^7.2.15",
-    "@angular/compiler": "^7.2.15",
-    "@angular/compiler-cli": "^7.2.15",
-    "@angular/core": "^7.2.15",
+    "@angular/common": "^7.2.16",
+    "@angular/compiler": "^7.2.16",
+    "@angular/compiler-cli": "^7.2.16",
+    "@angular/core": "^7.2.16",
     "@angular/flex-layout": "^7.0.0-beta.24",
-    "@angular/forms": "^7.2.15",
+    "@angular/forms": "^7.2.16",
     "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "^7.2.15",
-    "@angular/router": "^7.2.15",
+    "@angular/platform-browser": "^7.2.16",
+    "@angular/router": "^7.2.16",
     "@ngtools/webpack": "^7.3.9",
     "@types/hammerjs": "^2.0.36",
-    "@types/node": "^10.14.17",
+    "@types/node": "^10.17.13",
     "bell-on-bundler-error-plugin": "^2.0.0",
     "co": "^4.6.0",
-    "core-js": "^2.6.9",
+    "core-js": "^2.6.11",
     "css-loader": "^2.1.1",
     "express": "^4.17.1",
     "fs-extra": "^7.0.1",
     "hammerjs": "^2.0.8",
     "html-loader": "^0.5.5",
     "moment": "^2.24.0",
-    "ng-packagr": "^5.5.0",
-    "ngx-wig": "^2.1.1",
-    "node-sass": "^4.12.0",
-    "popper.js": "^1.15.0",
+    "ng-packagr": "^5.7.1",
+    "ngx-wig": "^2.1.3",
+    "node-sass": "^4.13.1",
+    "popper.js": "^1.16.0",
     "progress-bar-webpack-plugin": "^1.12.1",
     "pug": "^2.0.4",
     "pug-html-loader": "^1.1.5",
     "ramster-ui-core": "^0.1.3",
     "raw-loader": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.3",
-    "rxjs-compat": "^6.5.3",
+    "rxjs": "^6.5.4",
+    "rxjs-compat": "^6.5.4",
     "sass-loader": "^7.3.1",
-    "to-string-loader": "^1.1.5",
+    "to-string-loader": "^1.1.6",
     "tsickle": "^0.34.3",
     "typescript": "^3.2.4",
-    "webpack": "^4.39.3",
-    "webpack-dev-server": "^3.8.0",
+    "webpack": "^4.41.5",
+    "webpack-dev-server": "^3.10.1",
     "zone.js": "^0.8.29"
   },
   "peerDependencies": {
@@ -78,7 +78,8 @@
     "@angular/material": "^7.1.0",
     "@types/hammerjs": "^2.0.36",
     "hammerjs": "^2.0.8",
-    "ngx-wig": "^2.0.1",
+    "ngx-wig": "^2.1.3",
     "ramster-ui-core": ">=0.1.3"
-  }
+  },
+  "dependencies": {}
 }
