--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ramster-ui-forms",
-  "version": "0.5.7",
+  "version": "0.6.0",
   "description": "A forms and inputs package that goes together with the other ramster-ui packages.",
   "main": "dist/bundles/ramster-ui-forms.umd.js",
   "scripts": {
@@ -43,7 +43,9 @@
     "@types/hammerjs": "^2.0.36",
     "@types/node": "^10.17.13",
     "bell-on-bundler-error-plugin": "^2.0.0",
+    "body-parser": "^1.19.0",
     "co": "^4.6.0",
+    "connect-multiparty": "^2.2.0",
     "core-js": "^2.6.11",
     "css-loader": "^2.1.1",
     "express": "^4.17.1",
@@ -64,6 +66,7 @@
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
     "sass-loader": "^7.3.1",
+    "sharp": "^0.24.0",
     "to-string-loader": "^1.1.6",
     "tsickle": "^0.34.3",
     "typescript": "^3.2.4",
