--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ramster-ui-forms",
-  "version": "0.6.17",
+  "version": "0.6.18",
   "description": "A forms and inputs package that goes together with the other ramster-ui packages.",
   "main": "dist/bundles/ramster-ui-forms.umd.js",
   "scripts": {
@@ -55,6 +55,7 @@
     "moment": "^2.24.0",
     "ng-packagr": "^5.7.1",
     "ngx-wig": "^2.1.3",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.13.1",
     "popper.js": "^1.16.0",
     "progress-bar-webpack-plugin": "^1.12.1",
